# KISS-Matcher

./: .clang-format  .gitignore  .pre-commit-config.yaml  Makefile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  questions.md
.github/workflows/: issue_comment.yml
cpp/examples/: CMakeLists.txt  README.md
cpp/examples/include/quatro/: fpfh.h  matcher.h  quatro_utils.h
cpp/examples/src/: conversion_speed_comparison.cc  downsampling_speed_comparison.cc  fpfh.cc  matcher.cc  run_kiss_matcher.cc  run_matching_using_bunny.cc
cpp/kiss_matcher/: CMakeLists.txt
cpp/kiss_matcher/cmake/: kiss_matcherConfig.cmake
cpp/kiss_matcher/core/kiss_matcher/: FasterPFH.cpp  FasterPFH.hpp  GncSolver.cpp  GncSolver.hpp  KISSMatcher.cpp  KISSMatcher.hpp  ROBINMatching.cpp  ROBINMatching.hpp
cpp/kiss_matcher/core/kiss_matcher/kdtree/: kdtree.hpp  kdtree_tbb.hpp  nanoflann.hpp  nanoflann_tbb.hpp  traits.hpp
cpp/kiss_matcher/core/kiss_matcher/points/: downsampling.hpp  eigen.hpp  fast_floor.hpp  point_cloud.hpp  traits.hpp  vector3i_hash.hpp
cpp/kiss_matcher/core/kiss_matcher/tsl/: robin_growth_policy.h  robin_hash.h  robin_map.h  robin_set.h
python/: CMakeLists.txt  LICENSE  README.md  pyproject.toml
python/examples/: run_kiss_matcher.py  run_py_kiss_matcher.py
python/kiss_matcher/: __init__.py
python/kiss_matcher/pybind/: CMakeLists.txt  kiss_matcher_pybind.cpp  stl_vector_eigen.h
python/misc/: bin2pcd.py
python/utils/: bin2pcd.py  download_datasets.py
ros/: CMakeLists.txt  LICENSE  README.md  README_ROS2_REGISTRATION.md  package.xml
ros/config/: alignment_config.yaml  params.yaml  slam_config.yaml
ros/include/: tictoc.hpp
ros/include/slam/: loop_candidate.hpp  loop_closure.h  loop_detector.h  loop_types.hpp  pose_graph_manager.h  pose_graph_node.hpp  utils.hpp
ros/launch/: inter_frame_alignment.launch.yaml  run_kiss_matcher_sam.launch.yaml  visualizer_launch.py
ros/rviz/: kimera_multi_initial_alignment.rviz  kiss_matcher_sam.rviz  km_rviz.rviz
ros/src/: inter_frame_alignment.cpp  registration_visualizer.cpp  run_kiss_matcher.cpp
ros/src/slam/: loop_closure.cpp  loop_detector.cpp  pose_graph_manager.cpp
shellscripts/: install_robin.sh  install_teaserpp.sh
